fix(Adverts): Scrollbars

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,11 +11,3 @@ body {
 ul {
   list-style: none;
 }
-
-/* Utilities */
-.container {
-  max-width: 1100px;
-  margin: auto;
-  overflow: hidden;
-  padding: 0 2rem;
-}
